<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udea.edu.co.gasolfind.Fragments.MapFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hybrid_button"
                android:id="@+id/boton1"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/normal_button"
                android:id="@+id/boton2"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/terrain_button"
                android:id="@+id/boton3"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/satellite_button"
                android:id="@+id/boton4"
                android:onClick="onClick"/>
        </LinearLayout>
    </HorizontalScrollView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
